# SnapEnhance

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  tr_TR.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_suggestion.yml
.github/workflows/: android.yml  android_debug.yml  android_debugV2.yml  android_lag.yml  beta.yml  release.yml  release_debug.yml  test.yml  update-gradle-wrapper.yml  upload.js
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/lang/: AR.json  ar_SA.json  de_DE.json  en.json  en_US.json  fr_FR.json  hi_IN.json  hu_HU.json  it_IT.json  pl_PL.json  tr_TR.json
app/src/main/assets/web/: export_template.html  rawinflate.js
app/src/main/res/drawable/: action_button_cancel.xml  action_button_success.xml  back_arrow.xml  bitmoji_blank.xml  (+7 more)
common/: build.gradle.kts
core/: .gitignore  build.gradle.kts
core/src/main/assets/: xposed_init
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
manager/: build.gradle.kts  proguard-rules.pro
manager/src/main/: AndroidManifest.xml
mapper/: build.gradle  build.gradle.kts
native/: build.gradle.kts
native/jni/: CMakeLists.txt
native/jni/src/: common.h  config.h  grpc.h  library.cpp  logger.h  util.h
native/jni/src/hooks/: asset_hook.h  duplex_hook.h  fstat_hook.h  sqlite_mutex.h  unary_call.h
scripting/: build.gradle.kts
stub/: build.gradle.kts
(+1034 files in other folders)
